corrected contrast ratios, aria roles and iframe for accesibility audit

--- a/css/styles.css
+++ b/css/styles.css
@@ -700,7 +700,7 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color: #125524;
     text-decoration: none;
 }
 
@@ -892,7 +892,7 @@ label {
   width: 50%;
 }
 #restaurant-name {
-  color: #f18200;
+  color: #303e48;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.65rem;
   font-weight: 300;
@@ -900,11 +900,12 @@ label {
   margin: 1.4rem auto;
   text-transform: uppercase;
   line-height: 1.1;
-  width: 90%;
+  width: 100%;
+  text-align: center;
 }
 #restaurant-img {
     display: block;
-    width: 100%;
+    width: 97%;
     margin: 0 auto;
     border-radius: 2rem 0;
 }
@@ -979,7 +980,7 @@ label {
   }
 
   #review-form-container {
-    background-color: #6998c3;
+    background-color: #ffffff;
     padding: 10px 20px;
 
   }
@@ -1013,7 +1014,7 @@ label {
 
   .review-form-wrapper input[type='submit'] {
     border-radius: 4px;
-    width: 15%;
+    width: 21%;
     justify-self: center;
     box-shadow: 2px 2px 8px 2px #cecece;
     padding: 0.25rem 0.5rem;
@@ -1098,10 +1099,8 @@ label {
     margin: 20px 0;
   }
 
-  #restaurant-img {
-    max-width: 82%;
-    margin: 0 auto;
-  }
+
+
 
 #restaurant-hours td {
   color: #666;
@@ -1128,7 +1127,7 @@ label {
 	padding: 0 1rem;
 }
 .rating {
-	background-color: #c89a1e;
+	background-color: #125524;
 	text-transform: uppercase;
 	color: #fff;
 	font-weight: 500;
@@ -1166,7 +1165,7 @@ RESPONSIVE SETTINGS
     .inside #review-form-container {
         align-content: flex-start;
         padding: 20px 20px 0 20px;
-        width: 50%;
+        width: 100%;
       }
       /* .inside #restaurant-container {
         grid-row: 1 / -1;
